[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "textblob>=0.19.0",
    "wordcloud>=1.9.4",
    "spacy>=3.0.0",
]
